changed current context variables to a ThreadLocal approach